--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@clerk/nextjs": "^6.12.9",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
+    "@langchain/community": "^0.3.40",
+    "@langchain/core": "^0.3.44",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -62,6 +64,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "ignore": "^7.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.483.0",
     "next": "^15.2.3",
